norxold/soundSystem.nim


proc getPosition*(pstSound: ptr orxSOUNDSYSTEM_SOUND;
                                pvPosition: ptr orxVECTOR): ptr orxVECTOR {.cdecl,
    importc: "orxSoundSystem_GetPosition", dynlib: libORX.}
  ## Gets a sound position
  ##  @param[in]   _pstSound                             Concerned sound
  ##  @param[out]  _pvPosition                           Position to get
  ##  @return Sound's position

proc getAttenuation*(pstSound: ptr orxSOUNDSYSTEM_SOUND): orxFLOAT {.
    cdecl, importc: "orxSoundSystem_GetAttenuation", dynlib: libORX.}
  ## Gets a sound attenuation
  ##  @param[in] _pstSound                               Concerned Sound
  ##  @return Sound's attenuation

proc getReferenceDistance*(pstSound: ptr orxSOUNDSYSTEM_SOUND): orxFLOAT {.
    cdecl, importc: "orxSoundSystem_GetReferenceDistance", dynlib: libORX.}
  ## Gets a sound reference distance
  ##  @param[in] _pstSound                               Concerned Sound
  ##  @return Sound's reference distance

proc isLooping*(pstSound: ptr orxSOUNDSYSTEM_SOUND): orxBOOL {.cdecl,
    importc: "orxSoundSystem_IsLooping", dynlib: libORX.}
  ## Is sound looping?
  ##  @param[in]   _pstSound                             Concerned sound
  ##  @return orxTRUE if looping, orxFALSE otherwise

proc getDuration*(pstSound: ptr orxSOUNDSYSTEM_SOUND): orxFLOAT {.
    cdecl, importc: "orxSoundSystem_GetDuration", dynlib: libORX.}
  ## Gets a sound duration
  ##  @param[in]   _pstSound                             Concerned sound
  ##  @return Sound's duration (seconds)

proc getStatus*(pstSound: ptr orxSOUNDSYSTEM_SOUND): orxSOUNDSYSTEM_STATUS {.
    cdecl, importc: "orxSoundSystem_GetStatus", dynlib: libORX.}
  ## Gets a sound status (play/pause/stop)
  ##  @param[in]   _pstSound                             Concerned sound
  ##  @return orxSOUNDSYSTEM_STATUS

proc setGlobalVolume*(fGlobalVolume: orxFLOAT): orxSTATUS {.cdecl,
    importc: "orxSoundSystem_SetGlobalVolume", dynlib: libORX.}
  ## Sets global volume
  ##  @param[in] _fGlobalVolume                          Global volume to set
  ##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc getGlobalVolume*(): orxFLOAT {.cdecl,
    importc: "orxSoundSystem_GetGlobalVolume", dynlib: libORX.}
  ## Gets global volume
  ##  @return Gobal volume

proc setListenerPosition*(pvPosition: ptr orxVECTOR): orxSTATUS {.
    cdecl, importc: "orxSoundSystem_SetListenerPosition", dynlib: libORX.}
  ## Sets listener position
  ##  @param[in] _pvPosition                             Desired position
  ##  @return orxSTATUS_SUCCESS / orxSTATUS_FAILURE

proc getListenerPosition*(pvPosition: ptr orxVECTOR): ptr orxVECTOR {.
    cdecl, importc: "orxSoundSystem_GetListenerPosition", dynlib: libORX.}
  ## Gets listener position
  ##  @param[out] _pvPosition                            Listener's position
  ##  @return orxVECTOR / nil

